bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q5 (Execution Plan, object-id).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[country@0 as country, ENC_PT(product@1) as product, ENC_PT(nrOfReviews@3) as nrOfReviews, ENC_PT(avgPrice@2) as avgPrice]
  SortExec: expr=[ENC_SORT(nrOfReviews@3) DESC, ENC_SORT(ENC_TF(country@0)) ASC, ENC_SORT(ENC_TF(ENC_PT(product@1))) ASC], preserve_partitioning=[false]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(country@0, country@0), (product@2, product@1)], filter=EBV(EQ(nrOfReviews@1, maxReviews@0)), projection=[country@0, product@2, avgPrice@3, nrOfReviews@6]
      NestedLoopJoinExec: join_type=Inner, filter=IS_COMPATIBLE(country@0, country@1), projection=[country@0, maxReviews@1, product@3, avgPrice@4]
        ProjectionExec: expr=[ENC_PT(country@0) as country, <uuid>@1 as maxReviews]
          AggregateExec: mode=Single, gby=[country@0 as country], aggr=[<uuid>]
            ProjectionExec: expr=[country@0 as country, <uuid>@2 as nrOfReviews]
              AggregateExec: mode=Single, gby=[country@2 as country, product@0 as product], aggr=[<uuid>]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@2, reviewer@0)], projection=[product@0, review@1, country@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[product@0, review@1, reviewer@3]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, review@1]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType111>], blank_node_mode=Variable
                      FilterExec: DynamicFilter [ empty ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                    FilterExec: DynamicFilter [ empty ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
                  FilterExec: DynamicFilter [ empty ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> ?country], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
        ProjectionExec: expr=[NULL as country, product@0 as product, <uuid>@1 as avgPrice]
          AggregateExec: mode=Single, gby=[product@0 as product], aggr=[<uuid>]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(offer@1, offer@0)], projection=[product@0, price@3]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, offer@1]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType111>], blank_node_mode=Variable
                FilterExec: DynamicFilter [ empty ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
      ProjectionExec: expr=[ENC_PT(country@0) as country, product@1 as product, <uuid>@2 as nrOfReviews]
        AggregateExec: mode=Single, gby=[country@2 as country, product@0 as product], aggr=[<uuid>]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(reviewer@2, reviewer@0)], projection=[product@0, review@1, country@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[product@0, review@1, reviewer@3]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[product@0, review@1]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType111>], blank_node_mode=Variable
                FilterExec: DynamicFilter [ empty ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
              FilterExec: DynamicFilter [ empty ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
            FilterExec: DynamicFilter [ empty ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> ?country], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ empty ]]
