bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q5 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: country, ENC_PT(product) AS product, ENC_PT(nrOfReviews) AS nrOfReviews, ENC_PT(avgPrice) AS avgPrice
  Sort: AS_SORTABLE_BYTES(nrOfReviews) DESC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(country)) ASC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(product))) ASC NULLS FIRST
    Projection: lhs.country AS country, lhs.product AS product, lhs.avgPrice AS avgPrice, rhs.nrOfReviews AS nrOfReviews
      Inner Join: lhs.country = rhs.country, lhs.product = rhs.product Filter: EBV(EQ(rhs.nrOfReviews, lhs.maxReviews))
        SubqueryAlias: lhs
          Projection: lhs.country AS country, lhs.maxReviews AS maxReviews, rhs.product AS product, rhs.avgPrice AS avgPrice
            Inner Join:  Filter: IS_COMPATIBLE(lhs.country, rhs.country)
              SubqueryAlias: lhs
                Projection: ENC_PT(country) AS country, <uuid> AS maxReviews
                  Aggregate: groupBy=[[country AS country]], aggr=[[MAX(nrOfReviews) AS <uuid>]]
                    Projection: country, <uuid> AS nrOfReviews
                      Aggregate: groupBy=[[country AS country, product AS product]], aggr=[[COUNT(review) AS <uuid>]]
                        BasicGraphPattern: projection=[product, review, country], 
                          QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType111>]
                          QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product]
                          QuadPattern: triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer]
                          QuadPattern: triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> ?country]
              SubqueryAlias: rhs
                Projection: Struct({term_type:,value:,data_type:,language_tag:}) AS country, product, <uuid> AS avgPrice
                  Aggregate: groupBy=[[product AS product]], aggr=[[AVG(xsd:float(xsd:string(ENC_TF(ENC_PT(price))))) AS <uuid>]]
                    BasicGraphPattern: projection=[product, price], 
                      QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType111>]
                      QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?product]
                      QuadPattern: triple_pattern=[?offer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price]
        SubqueryAlias: rhs
          Projection: ENC_PT(country) AS country, product, <uuid> AS nrOfReviews
            Aggregate: groupBy=[[country AS country, product AS product]], aggr=[[COUNT(review) AS <uuid>]]
              BasicGraphPattern: projection=[product, review, country], 
                QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType111>]
                QuadPattern: triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product]
                QuadPattern: triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer]
                QuadPattern: triple_pattern=[?reviewer <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/country> ?country]
