bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q6 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(reviewer@0) as reviewer, ENC_PT(<uuid>@1) as reviewerAvgScore]
  FilterExec: EBV(GT(<uuid>@1, MUL(<uuid>@2, 4:2:Some(1500000000000000000),36,18))), projection=[reviewer@0, <uuid>@1]
    AggregateExec: mode=Final, gby=[reviewer@0 as reviewer], aggr=[<uuid>, <uuid>]
      CoalescePartitionsExec
        AggregateExec: mode=Partial, gby=[reviewer@1 as reviewer], aggr=[<uuid>, <uuid>]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[avgScore@0, reviewer@2, score@4]
            CrossJoinExec
              ProjectionExec: expr=[<uuid>@0 as avgScore]
                AggregateExec: mode=Final, gby=[], aggr=[<uuid>]
                  CoalescePartitionsExec
                    AggregateExec: mode=Partial, gby=[], aggr=[<uuid>]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[score@2]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[review@1]
                          DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>
                          DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, object=?product, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
                        UnionExec
                          DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
                          DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
                          DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
                          DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewer@2]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[review@1]
                  DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>
                  DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, object=?product, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
                DataSourceExec: [GPOS] subject=?review, predicate=<http://purl.org/stuff/rev#reviewer>, object=?reviewer, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
            UnionExec
              DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?review, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>, object=?score, additional_filters=[DynamicFilter [ Generation 2; review in (<object id range>) ]]
